Failure deleting SMS message while modem is "enabling"
During the modem enabling phase, the Messaging interface goes over listing all existing SMS messages in the modem. For each of the messages, a "Added" signal is emitted, which clients may be listening to.
When such an "Added" signal is received, the client could read the SMS message contents, and right away request to delete it. This delete request may arrive ModemManager still during the modem enabling phase, before it has finished reaching the enabled state. When that happens, the request is rejected:
Failed to call method: org.freedesktop.ModemManager1.Modem.Messaging.Delete:
object_path= /org/freedesktop/ModemManager1/Modem/0:
org.freedesktop.ModemManager1.Error.Core.WrongState:
Cannot delete SMS: device not yet enabled
We are the ones notifying too early (before being fully enabled) about the newly available SMS message with the "Added" signal, and there really is no reason why we should reject a delete operation on that SMS message. A totally different story would have been if we had skipped the "Added" signals during the enabling phase, but this is not the case, we should allow the delete operation to go on.