iface-modem-messaging: allow Delete operation during enabling/disabling

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/671

(cherry picked from commit ef6cf656f7d5cf497b416c7da1273d2b9aa749ec)